:art: Fix blog post gradient overlay on Safari

--- a/src/app/sites/current/current.component.scss
+++ b/src/app/sites/current/current.component.scss
@@ -56,11 +56,11 @@
                         left: 0;
                         width: 100%;
                         height: 75px;
-                        background: -webkit-gradient(linear,left top,left bottom,color-stop(0%,rgba(255,255,255,0)),color-stop(100%,black));
-                        background: -webkit-linear-gradient(top,rgba(255,255,255,0) 0%,black 100%);
-                        background: -o-linear-gradient(top,rgba(255,255,255,0) 0%,black 100%);
-                        background: -ms-linear-gradient(top,rgba(255,255,255,0) 0%,black 100%);
-                        background: linear-gradient(to bottom,rgba(255,255,255,0) 0%,black 100%);
+                        background: -webkit-gradient(linear,left top,left bottom,color-stop(0%,rgba(#000,0)),color-stop(100%,#000));
+                        background: -webkit-linear-gradient(top,rgba(#000,0) 0%,#000 100%);
+                        background: -o-linear-gradient(top,rgba(#000,0) 0%,#000 100%);
+                        background: -ms-linear-gradient(top,rgba(#000,0) 0%,#000 100%);
+                        background: linear-gradient(to bottom,rgba(#000,0) 0%,#000 100%);
                     }
                 }
                 .post-more-button {
